<?xml version="1.0"?>
<package format="2">
    <name>frame_add</name>
    <version>0.0.0</version>
    <description>balabala</description>

    <maintainer email="nanhe_chen@zju.edu.cn">nanhe_chen</maintainer>
    <license>TODO</license>   

    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>std_msgs</depend>
    <depend>geometry_msgs</depend>

</package>